--- a/.qoder/repowiki/zh/content/后端架构/AI服务集成/模型发现与选择.md
+++ b/.qoder/repowiki/zh/content/后端架构/AI服务集成/模型发现与选择.md
@@ -12,7 +12,16 @@
 - [models.py（路由）](file://api/routers/models.py)
 - [chat.py（路由）](file://api/routers/chat.py)
 - [exceptions.py](file://open_notebook/exceptions.py)
+- [key_provider.py](file://open_notebook/ai/key_provider.py)
+- [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx)
 </cite>
+
+## 更新摘要
+**变更内容**
+- DeepSeek提供商优先级显著提升：在PROVIDER_PRIORITY列表中位列第一，体现其在OPC场景中的成本效益和中英双语能力优势
+- 新增DeepSeek特定的模型偏好推荐：在MODEL_PREFERENCES中添加deepseek-chat、deepseek-reasoner、deepseek-coder等专用模型
+- 改进的提供商优先级列表：重新排序的供应商优先级，更好地平衡国际和中国AI提供商
+- 前端显示顺序优化：DeepSeek在API密钥配置界面中优先显示，提升用户体验
 
 ## 目录
 1. [简介](#简介)
@@ -26,12 +35,12 @@
 9. [结论](#结论)
 
 ## 简介
-本文件系统性阐述“模型发现与选择”机制，覆盖以下关键点：
-- 基于内容长度的模型自动选择算法：当输入文本超过阈值时，自动切换到“大上下文模型”。
-- 模型ID优先级规则：按提供商优先级与模型偏好模式进行优选。
+本文件系统性阐述"模型发现与选择"机制，覆盖以下关键点：
+- 基于内容长度的模型自动选择算法：当输入文本超过阈值时，自动切换到"大上下文模型"。
+- 模型ID优先级规则：按提供商优先级与模型偏好模式进行优选，现已包含DeepSeek的最高优先级。
 - 默认模型配置策略：通过数据库记录的默认模型槽位进行统一管理。
 - large_context 模型的选择逻辑、token 计数计算方法与模型类型验证机制。
-- 模型配置检查、错误处理与日志记录实现。
+- 模型配置检查、错误处理与日志记录实现，包括DeepSeek等提供商的特殊处理。
 - 最佳实践、性能优化建议与故障排除指南。
 
 ## 项目结构
@@ -40,11 +49,12 @@
 - 工具层：token 计数工具、上下文构建器
 - API 层：模型查询、自动分配默认模型、测试连接等接口
 - 异常与日志：统一异常体系与日志记录
+- DeepSeek优先级增强：新增DeepSeek特定的模型推荐和优先级提升
 
 ```mermaid
 graph TB
 subgraph "AI 层"
-MD["model_discovery.py<br/>模型发现与分类"]
+MD["model_discovery.py<br/>模型发现与分类<br/>DeepSeek优先级提升"]
 MM["models.py(ModelManager)<br/>默认模型与实例化"]
 PR["provision.py<br/>模型预配与选择"]
 end
@@ -53,13 +63,15 @@ TU["token_utils.py<br/>token计数"]
 CB["context_builder.py<br/>上下文构建与截断"]
 end
 subgraph "API 层"
-MR["routers/models.py<br/>模型API与自动分配"]
+MR["routers/models.py<br/>模型API与自动分配<br/>DeepSeek最高优先级"]
 MS["models_service.py<br/>服务封装"]
 API["models.py(API)<br/>请求/响应模型"]
 CHAT["routers/chat.py<br/>聊天会话与模型选择"]
 end
 subgraph "基础设施"
 EX["exceptions.py<br/>异常定义"]
+KP["key_provider.py<br/>提供商配置支持"]
+FR["frontend/page.tsx<br/>前端显示优化<br/>DeepSeek优先显示"]
 end
 MD --> MM
 PR --> MM
@@ -72,49 +84,55 @@ CHAT --> MM
 MR --> API
 MS --> API
 MM --> EX
+KP --> MD
+FR --> MR
 ```
 
-图表来源
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+**图表来源**
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L1-L48)
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L1-L200)
-- [models.py（路由）](file://api/routers/models.py#L1-L771)
+- [models.py（路由）](file://api/routers/models.py#L1-L782)
 - [models_service.py](file://api/models_service.py#L1-L113)
 - [models.py（API）](file://api/models.py#L1-L685)
 - [chat.py（路由）](file://api/routers/chat.py#L1-L200)
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
+- [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
+- [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L93)
 
-章节来源
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+**章节来源**
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L1-L48)
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L1-L200)
-- [models.py（路由）](file://api/routers/models.py#L1-L771)
+- [models.py（路由）](file://api/routers/models.py#L1-L782)
 - [models_service.py](file://api/models_service.py#L1-L113)
 - [models.py（API）](file://api/models.py#L1-L685)
 - [chat.py（路由）](file://api/routers/chat.py#L1-L200)
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
+- [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
+- [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L93)
 
 ## 核心组件
-- 模型发现与分类：从各提供商拉取可用模型列表，并按名称模式分类为语言、嵌入、语音识别或语音合成模型。
+- 模型发现与分类：从各提供商拉取可用模型列表，并按名称模式分类为语言、嵌入、语音识别或语音合成模型。现已支持DeepSeek等多家提供商。
 - 默认模型与实例化：通过数据库记录的默认模型槽位加载对应模型；支持凭据注入与环境变量回退。
 - 模型预配与选择：根据输入内容长度阈值自动选择 large_context 模型，否则按显式 model_id 或默认类型选择。
 - token 计数与上下文截断：使用 o200k_base 编码估算 token 数量；上下文构建器支持按最大 token 截断。
-- API 自动分配：按提供商优先级与模型偏好模式，自动为各类默认槽位分配最优可用模型。
+- API 自动分配：按提供商优先级与模型偏好模式，自动为各类默认槽位分配最优可用模型，现已包含DeepSeek的最高优先级。
 
-章节来源
+**章节来源**
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L135-L166)
 - [models.py](file://open_notebook/ai/models.py#L97-L267)
 - [provision.py](file://open_notebook/ai/provision.py#L9-L61)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L15-L48)
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L21-L200)
-- [models.py（路由）](file://api/routers/models.py#L634-L771)
+- [models.py（路由）](file://api/routers/models.py#L634-L782)
 
 ## 架构总览
-模型发现与选择贯穿“发现—登记—配置—实例化—调用”的完整链路，同时在运行时依据输入规模动态选择合适模型。
+模型发现与选择贯穿"发现—登记—配置—实例化—调用"的完整链路，同时在运行时依据输入规模动态选择合适模型。DeepSeek的优先级提升确保系统在OPC场景中能够优先选择成本效益更高的模型。
 
 ```mermaid
 sequenceDiagram
@@ -127,7 +145,7 @@ participant INST as "模型实例化(ModelManager)"
 participant TK as "token_utils"
 participant PR as "provision(运行时选择)"
 U->>API : 请求模型列表/自动分配
-API->>DISC : 发现提供商模型
+API->>DISC : 发现提供商模型(DeepSeek优先)
 DISC->>DB : 同步注册新模型
 API->>CFG : 读取默认模型槽位
 API->>INST : 加载默认模型(凭据/环境回退)
@@ -138,7 +156,7 @@ PR->>INST : 实例化目标模型
 INST-->>U : 返回推理结果
 ```
 
-图表来源
+**图表来源**
 - [models.py（路由）](file://api/routers/models.py#L165-L200)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L632-L724)
 - [models.py](file://open_notebook/ai/models.py#L61-L95)
@@ -148,9 +166,10 @@ INST-->>U : 返回推理结果
 
 ## 详细组件分析
 
-### 组件A：模型发现与分类
+### 组件A：模型发现与分类（已更新）
 - 功能要点
   - 针对多家提供商（OpenAI、Anthropic、Google、Ollama、Groq、Mistral、DeepSeek、xAI、OpenRouter、Voyage、ElevenLabs、OpenAI-Compatible 等）分别实现发现函数。
+  - **增强**：DeepSeek提供完整的动态API发现机制，支持deepseek-chat、deepseek-reasoner、deepseek-coder等专用模型。
   - 使用名称模式映射进行模型类型分类（语言、嵌入、语音识别、语音合成），部分提供商采用静态清单。
   - 支持同步到数据库：批量去重、新增与现有统计。
 - 关键数据结构
@@ -174,14 +193,15 @@ CreateNew --> Done(["完成"])
 SyncDB --> |否| Done
 ```
 
-图表来源
+**图表来源**
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L173-L204)
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L632-L696)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L632-L724)
 
-章节来源
+**章节来源**
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L135-L166)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L589-L630)
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L632-L724)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L663-L748)
 
 ### 组件B：默认模型与实例化
 - 功能要点
@@ -224,11 +244,11 @@ DefaultModels --> ModelManager : "提供默认槽位"
 ModelManager --> Model : "加载模型"
 ```
 
-图表来源
+**图表来源**
 - [models.py](file://open_notebook/ai/models.py#L61-L95)
 - [models.py](file://open_notebook/ai/models.py#L97-L267)
 
-章节来源
+**章节来源**
 - [models.py](file://open_notebook/ai/models.py#L61-L95)
 - [models.py](file://open_notebook/ai/models.py#L97-L267)
 
@@ -260,18 +280,21 @@ Ok --> |是| Return(["返回模型实例"])
 Ok --> |否| RaiseErr["记录错误并抛出异常"]
 ```
 
-图表来源
+**图表来源**
 - [provision.py](file://open_notebook/ai/provision.py#L9-L61)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L15-L48)
 
-章节来源
+**章节来源**
 - [provision.py](file://open_notebook/ai/provision.py#L9-L61)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L15-L48)
 
-### 组件D：API 自动分配默认模型
+### 组件D：API 自动分配默认模型（已更新）
 - 优先级规则
-  - PROVIDER_PRIORITY 定义提供商优先顺序（如 OpenAI、Anthropic、Google 等）。
-  - MODEL_PREFERENCES 定义各提供商内的偏好模型名称模式（如 gpt-4o、claude-3-5-sonnet 等）。
+  - **更新**：PROVIDER_PRIORITY 定义提供商优先顺序，现已将DeepSeek列为最高优先级：
+    - deepseek、openai、anthropic、google、moonshot、qwen、zhipu、mistral、groq、xai、openrouter、ollama、azure、openai_compatible
+  - MODEL_PREFERENCES 定义各提供商内的偏好模型名称模式，**新增**DeepSeek特定推荐：
+    - deepseek: ["deepseek-chat", "deepseek-reasoner", "deepseek-coder"]
+  - 其他提供商偏好保持不变，如gpt-4o、claude-3-5-sonnet等。
 - 选择逻辑
   - 将可用模型按类型分组，遍历 PROVIDER_PRIORITY，优先选择匹配 MODEL_PREFERENCES 的模型；若无偏好匹配则选择首个可用模型。
   - 对每个默认槽位（如 default_chat_model、large_context_model、default_embedding_model 等）执行上述流程，跳过已有值的槽位。
@@ -287,20 +310,20 @@ participant SEL as "_get_preferred_model"
 participant D as "DefaultModels"
 C->>R : POST /models/auto-assign
 R->>Q : 查询所有模型(按类型分组)
-R->>SEL : 为每个槽位选择最佳模型
+R->>SEL : 为每个槽位选择最佳模型(DeepSeek优先)
 SEL->>SEL : 按提供商优先级与偏好筛选
 SEL-->>R : 返回最佳模型
 R->>D : 更新默认模型槽位
 R-->>C : 返回分配结果
 ```
 
-图表来源
-- [models.py（路由）](file://api/routers/models.py#L678-L771)
+**图表来源**
+- [models.py（路由）](file://api/routers/models.py#L678-L782)
 - [models.py（路由）](file://api/routers/models.py#L634-L676)
 
-章节来源
+**章节来源**
 - [models.py（路由）](file://api/routers/models.py#L87-L109)
-- [models.py（路由）](file://api/routers/models.py#L634-L771)
+- [models.py（路由）](file://api/routers/models.py#L634-L782)
 
 ### 组件E：上下文构建与截断
 - 上下文构建器 ContextBuilder
@@ -311,16 +334,35 @@ R-->>C : 返回分配结果
 - 与 token 计数的关系
   - ContextItem 在初始化时调用 token_count 计算内容 token 数；ContextBuilder 在格式化响应时汇总 total_tokens。
 
-章节来源
+**章节来源**
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L21-L200)
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L346-L391)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L15-L48)
+
+### 组件F：DeepSeek优先级增强（新增）
+- DeepSeek优先级提升
+  - **最高优先级**：在PROVIDER_PRIORITY列表中位列第一，体现其在OPC场景中的成本效益和中英双语能力优势
+  - **专用模型推荐**：MODEL_PREFERENCES中新增deepseek-chat、deepseek-reasoner、deepseek-coder等专用模型
+  - **动态API发现**：完整的DeepSeek API集成，支持实时模型列表获取
+- 前端显示优化
+  - **优先显示**：在API密钥配置界面中DeepSeek优先显示，提升用户体验
+  - **静态模型列表**：当API发现失败时提供静态模型回退
+- 配置支持
+  - 通过环境变量 `DEEPSEEK_API_KEY` 进行配置
+  - 支持凭据注入和环境变量回退
+
+**章节来源**
+- [models.py（路由）](file://api/routers/models.py#L87-L116)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L498-L529)
+- [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L93)
+- [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L165-L167)
 
 ## 依赖关系分析
 - 模块耦合
   - ModelManager 依赖 DefaultModels 与 Credential，负责模型实例化与类型校验。
   - provision 依赖 token_utils 进行 token 计数，依赖 ModelManager 获取默认模型。
   - API 路由依赖 ModelManager 与 DefaultModels，提供模型查询与自动分配。
+  - **增强**：DeepSeek优先级提升影响整个自动分配流程，使其成为首选提供商。
 - 外部依赖
   - Esperanto：统一的 AI 模型工厂，负责具体提供商的模型实例化。
   - httpx：异步 HTTP 客户端，用于各提供商模型发现。
@@ -336,28 +378,35 @@ MM --> APIR["routers/models.py"]
 APIR --> MS["models_service.py"]
 APIR --> MD["model_discovery.py"]
 APIR --> EX["exceptions.py"]
+KP["key_provider.py"] --> MD
+FR["frontend/page.tsx"] --> APIR
 ```
 
-图表来源
+**图表来源**
 - [provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [models.py（路由）](file://api/routers/models.py#L1-L200)
 - [models_service.py](file://api/models_service.py#L1-L113)
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
+- [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
+- [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
 
-章节来源
+**章节来源**
 - [models.py](file://open_notebook/ai/models.py#L1-L267)
 - [models.py（路由）](file://api/routers/models.py#L1-L200)
 - [provision.py](file://open_notebook/ai/provision.py#L1-L61)
-- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [models_service.py](file://api/models_service.py#L1-L113)
 - [exceptions.py](file://open_notebook/exceptions.py#L1-L71)
+- [key_provider.py](file://open_notebook/ai/key_provider.py#L316-L465)
+- [page.tsx（前端）](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
 
 ## 性能考量
 - 模型发现
   - 并行发现多个提供商模型，减少等待时间；对每个提供商独立超时控制，避免阻塞。
   - 同步阶段批量查询现有模型，降低 N+1 查询开销。
+  - **增强**：DeepSeek优先级提升减少不必要的API调用，提高选择效率。
 - token 计数
   - 优先使用缓存编码表（TIKTOKEN_CACHE_DIR），提升重复计算性能。
   - 导入失败时使用简单估算，避免阻塞。
@@ -366,39 +415,44 @@ APIR --> EX["exceptions.py"]
 - 实例化缓存
   - Esperanto 工厂对模型实例进行缓存，减少重复初始化成本。
 
-章节来源
+**章节来源**
 - [model_discovery.py](file://open_notebook/ai/model_discovery.py#L708-L724)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L10-L12)
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L129-L134)
 
 ## 故障排除指南
-- “未配置默认模型”
+- "未配置默认模型"
   - 现象：调用 get_default_model 返回 None 并记录警告。
   - 排查：前往设置页面配置对应类型的默认模型；或通过 API 自动分配功能生成默认槽位。
   - 参考：[models.py](file://open_notebook/ai/models.py#L220-L264)
-- “模型类型不匹配”
+- "模型类型不匹配"
   - 现象：期望 LanguageModel 却得到其他类型模型，抛出错误。
   - 排查：确认默认模型槽位配置的是语言模型；检查模型类型字段是否正确。
   - 参考：[provision.py](file://open_notebook/ai/provision.py#L49-L58)
-- “无可用模型”
+- "无可用模型"
   - 现象：自动分配返回 missing 列表，提示某些槽位无可用模型。
   - 排查：检查模型发现是否成功、模型类型是否正确、是否被过滤。
   - 参考：[models.py（路由）](file://api/routers/models.py#L733-L743)
-- “token 计数异常”
+- "token 计数异常"
   - 现象：tiktoken 导入失败导致估算偏差。
   - 排查：安装 tiktoken；或接受估算误差；必要时调整阈值。
   - 参考：[token_utils.py](file://open_notebook/utils/token_utils.py#L31-L33)
-- “上下文超出阈值”
+- "上下文超出阈值"
   - 现象：构建上下文后 token 超标。
   - 排查：降低 max_tokens 或减少高优先级项；检查 ContextBuilder 的优先权重。
   - 参考：[context_builder.py](file://open_notebook/utils/context_builder.py#L132-L134)
+- **新增**："DeepSeek优先级问题"
+  - 现象：期望DeepSeek但选择了其他提供商。
+  - 排查：检查PROVIDER_PRIORITY配置、MODEL_PREFERENCES偏好设置；确认DeepSeek API密钥配置正确。
+  - 参考：[models.py（路由）](file://api/routers/models.py#L87-L116)
 
-章节来源
+**章节来源**
 - [models.py](file://open_notebook/ai/models.py#L220-L264)
 - [provision.py](file://open_notebook/ai/provision.py#L49-L58)
 - [models.py（路由）](file://api/routers/models.py#L733-L743)
 - [token_utils.py](file://open_notebook/utils/token_utils.py#L31-L33)
 - [context_builder.py](file://open_notebook/utils/context_builder.py#L132-L134)
+- [models.py（路由）](file://api/routers/models.py#L87-L116)
 
 ## 结论
-本机制通过“发现—登记—配置—实例化—运行时选择”的闭环，实现了灵活、可扩展且健壮的模型管理与选择能力。基于内容长度的自动切换与严格的类型验证，既保证了性能与成本控制，也提升了系统的可靠性。配合 API 的自动分配与完善的日志/异常体系，便于运维与排错。
+本机制通过"发现—登记—配置—实例化—运行时选择"的闭环，实现了灵活、可扩展且健壮的模型管理与选择能力。**DeepSeek优先级的显著提升**进一步增强了系统的智能化服务能力，通过最高优先级的提供商选择和专用模型推荐，确保系统在OPC场景中能够优先选择成本效益更高、性能更优的模型。结合完整的API自动分配与完善的日志/异常体系，便于运维与排错，为用户提供更加高效、可靠的AI模型服务体验。
