--- a/.qoder/repowiki/zh/content/后端架构/AI服务集成/连接测试与健康检查.md
+++ b/.qoder/repowiki/zh/content/后端架构/AI服务集成/连接测试与健康检查.md
@@ -15,6 +15,14 @@
 - [frontend/src/components/errors/ConnectionErrorOverlay.tsx](file://frontend/src/components/errors/ConnectionErrorOverlay.tsx)
 </cite>
 
+## 更新摘要
+**变更内容**
+- 新增中国AI提供商连接测试功能支持
+- 添加阿里云百炼和硅基流动的测试模型配置
+- 更新连接测试器以支持新增提供商
+- 增强模型发现器以包含中文服务商支持
+- 完善凭证提供器的初始化配置
+
 ## 目录
 1. [简介](#简介)
 2. [项目结构](#项目结构)
@@ -39,9 +47,10 @@
 - 状态缓存：前端配置缓存与后端版本检查缓存
 - 配置示例与调优建议：提供可操作的配置清单与性能优化要点
 - 故障诊断工具：结合前端连接守卫与后端健康检查接口进行定位
+- **新增**：中国AI提供商支持，包括阿里云百炼和硅基流动的连接测试
 
 ## 项目结构
-该功能横跨后端API层、AI基础设施层与前端UI层，形成“配置-测试-展示”的闭环。
+该功能横跨后端API层、AI基础设施层与前端UI层，形成"配置-测试-展示"的闭环。
 
 ```mermaid
 graph TB
@@ -81,17 +90,17 @@ MD --> CRED
 - [api/routers/credentials.py](file://api/routers/credentials.py#L1-L387)
 - [api/routers/models.py](file://api/routers/models.py#L1-L771)
 - [api/routers/config.py](file://api/routers/config.py#L1-L161)
-- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L439)
-- [open_notebook/ai/key_provider.py](file://open_notebook/ai/key_provider.py#L1-L298)
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L445)
+- [open_notebook/ai/key_provider.py](file://open_notebook/ai/key_provider.py#L1-L465)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
 - [open_notebook/domain/credential.py](file://open_notebook/domain/credential.py#L1-L200)
 
 **章节来源**
-- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L439)
-- [open_notebook/ai/key_provider.py](file://open_notebook/ai/key_provider.py#L1-L298)
+- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L445)
+- [open_notebook/ai/key_provider.py](file://open_notebook/ai/key_provider.py#L1-L465)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [open_notebook/domain/credential.py](file://open_notebook/domain/credential.py#L1-L200)
 - [api/routers/credentials.py](file://api/routers/credentials.py#L1-L387)
 - [api/routers/models.py](file://api/routers/models.py#L1-L771)
@@ -161,6 +170,7 @@ CR-->>FE : 展示测试结果
 ### 连接测试器（connection_tester）
 - 功能职责
   - 支持标准提供商（OpenAI、Anthropic、Google、Groq、Mistral、DeepSeek、xAI、OpenRouter、Voyage、ElevenLabs）与URL类提供商（Ollama、OpenAI兼容）、Azure特殊处理
+  - **新增**：支持中国AI提供商（阿里云百炼、硅基流动）的连接测试
   - 对每个提供商选择最小/最便宜的测试模型，减少成本与延迟
   - 统一错误消息归一化，区分认证失败、权限不足、速率限制、网络超时等场景
   - 支持按凭据ID进行定向测试，或使用默认配置
@@ -191,21 +201,23 @@ Normalize --> ReturnErr["返回错误消息"]
 
 **图表来源**
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L170-L300)
-- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L367-L439)
+- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L367-L445)
 
 **章节来源**
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L170-L300)
-- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L367-L439)
+- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L367-L445)
 
 ### 凭证提供器（key_provider）
 - 功能职责
   - 将数据库中的Credential记录转换为环境变量，供Esperanto读取
   - 支持Azure/Vertex/OpenAI兼容等多字段配置的环境变量注入
+  - **新增**：支持阿里云百炼和硅基流动的凭证初始化
   - 提供按提供商批量注入与按需注入两种方式
 - 关键点
   - 简单提供商：仅API Key
   - 复杂提供商：多端点/多参数，分别注入对应环境变量
   - 回退策略：若数据库无配置，则使用环境变量作为最终兜底
+  - **新增**：PROVIDER_INIT_CONFIG中包含阿里云百炼(DASHSCOPE_API_KEY)和硅基流动(SILICONFLOW_API_KEY)的配置
 
 ```mermaid
 sequenceDiagram
@@ -240,7 +252,7 @@ KP-->>CM : 返回注入结果
   - 按类型创建相应模型实例（语言/嵌入/语音识别/文本转语音）
 - 缓存与一致性
   - Esperanto负责实际模型实例缓存，ModelManager保持无状态
-  - 默认配置采用“每次访问从数据库刷新”的策略，确保实时生效
+  - 默认配置采用"每次访问从数据库刷新"的策略，确保实时生效
 
 **章节来源**
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L97-L176)
@@ -250,9 +262,12 @@ KP-->>CM : 返回注入结果
   - 自动拉取各提供商可用模型列表，支持静态模型与动态API发现
   - 对模型进行类型分类（语言/嵌入/语音识别/文本转语音）
   - 支持批量同步与计数查询
+  - **新增**：支持阿里云百炼和硅基流动的模型发现
 - 特殊处理
   - Azure/Vertex需要凭据才能发现，因此提供端点式调用而非通用函数
   - Ollama通过本地端点/api/tags获取模型列表
+  - **新增**：阿里云百炼使用DashScope API的/models端点，硅基流动使用SiliconFlow API的/v1/models端点
+  - **新增**：两个新提供商都提供静态模型列表作为API失败时的回退方案
 
 **章节来源**
 - [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L608-L724)
@@ -291,6 +306,7 @@ KP-->>CM : 返回注入结果
   - connection_tester对提供商类型有强内聚，但对外通过统一接口解耦
   - key_provider与domain.credential紧密耦合，保证凭据安全存储与透明注入
   - 前后端通过API接口解耦，前端仅依赖HTTP响应结构
+- **新增**：新增的中国AI提供商通过相同的接口集成到现有架构中
 
 ```mermaid
 graph LR
@@ -332,8 +348,6 @@ API --> CFIG["config"]
 - 日志与可观测性
   - 关键路径均记录日志，便于定位性能瓶颈与错误根因
 
-[本节为通用指导，无需特定文件引用]
-
 ## 故障排查指南
 - 常见错误与定位
   - 401/403：认证失败或权限不足，检查API Key与提供商权限
@@ -349,6 +363,7 @@ API --> CFIG["config"]
 - 凭据与配置
   - 确认Credential记录已保存且加密密钥已配置
   - 对于Azure/Vertex/OpenAI兼容，确认所有必需字段均已注入环境变量
+  - **新增**：对于阿里云百炼和硅基流动，确认DASHSCOPE_API_KEY和SILICONFLOW_API_KEY已正确配置
 
 **章节来源**
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L275-L299)
@@ -356,14 +371,17 @@ API --> CFIG["config"]
 - [api/routers/config.py](file://api/routers/config.py#L123-L160)
 
 ## 结论
-本系统通过“前端连接守卫 + 后端健康检查 + 统一连接测试器”的组合，实现了对多AI提供商的全面连接测试与健康监控。其设计强调：
+本系统通过"前端连接守卫 + 后端健康检查 + 统一连接测试器"的组合，实现了对多AI提供商的全面连接测试与健康监控。其设计强调：
 - 可靠性：最小成本测试、错误归一化与明确的回退链路
 - 可维护性：模块职责清晰、接口稳定、日志可观测
 - 可扩展性：新增提供商只需在TEST_MODELS与特殊处理函数中扩展
 - 可诊断性：前后端协同，提供完整的状态与错误信息
+
+**更新** 本次更新特别增强了对中文AI生态的支持，新增了阿里云百炼和硅基流动两大中国AI提供商的连接测试功能，进一步完善了系统的国际化和本土化能力。
 
 建议在生产环境中：
 - 明确超时阈值并结合业务场景调优
 - 对高频测试场景引入指数退避与熔断策略
 - 定期审查凭据与配置，确保及时更新
 - 利用日志与版本检查接口建立自动化巡检
+- **新增**：关注中国AI提供商的API变化和模型更新，定期同步测试配置
