--- a/.qoder/repowiki/zh/content/开发者指南/开发环境搭建.md
+++ b/.qoder/repowiki/zh/content/开发者指南/开发环境搭建.md
@@ -35,15 +35,22 @@
 - [open_notebook/skills/browser_base.py](file://open_notebook/skills/browser_base.py)
 - [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py)
 - [api/routers/skills.py](file://api/routers/skills.py)
+- [api/routers/workflows.py](file://api/routers/workflows.py)
+- [api/routers/workflow_builder.py](file://api/routers/workflow_builder.py)
+- [api/routers/workflow_templates.py](file://api/routers/workflow_templates.py)
+- [open_notebook/workflows/service.py](file://open_notebook/workflows/service.py)
+- [open_notebook/workflows/engine.py](file://open_notebook/workflows/engine.py)
+- [open_notebook/workflows/templates.py](file://open_notebook/workflows/templates.py)
+- [open_notebook/workflows/conversational.py](file://open_notebook/workflows/conversational.py)
+- [run_api.py](file://run_api.py)
 </cite>
 
 ## 更新摘要
 **变更内容**
-- 新增PowerShell恢复脚本（resume.ps1），为Windows开发者提供一键恢复开发环境的便利工具
-- 新增开发工具文档，包含脚本使用说明和最佳实践
-- 补充技能系统依赖安装脚本（install-deps.sh）的说明
-- 增强文档导出工具（export_docs.py）的使用指南
-- 完善开发环境快速恢复和环境设置的完整工具链
+- 新增工作流相关文件的热重载支持，通过卷挂载 open_notebook 目录实现技能和工作流相关文件的实时更新
+- 改进API路由的开发挂载方式，优化开发服务器的即时反馈能力
+- 增强工作流系统的开发体验，支持工作流模板、对话式工作流构建器的热重载
+- 完善技能系统与工作流系统的协同开发支持
 
 ## 目录
 1. [简介](#简介)
@@ -52,18 +59,19 @@
 4. [架构总览](#架构总览)
 5. [详细组件分析](#详细组件分析)
 6. [技能系统架构](#技能系统架构)
-7. [开发工具与脚本](#开发工具与脚本)
-8. [依赖分析](#依赖分析)
-9. [性能考虑](#性能考虑)
-10. [故障排查指南](#故障排查指南)
-11. [结论](#结论)
-12. [附录](#附录)
+7. [工作流系统架构](#工作流系统架构)
+8. [开发工具与脚本](#开发工具与脚本)
+9. [依赖分析](#依赖分析)
+10. [性能考虑](#性能考虑)
+11. [故障排查指南](#故障排查指南)
+12. [结论](#结论)
+13. [附录](#附录)
 
 ## 简介
-本指南面向开发者与运维人员，提供 Open Notebook 的完整开发环境搭建流程，涵盖系统要求、Python 与 Node.js 版本、依赖安装、Docker 与单容器部署、环境变量与数据库初始化、AI 提供商密钥配置、开发服务器启动与热重载、技能系统开发支持、开发工具脚本使用、以及常见问题排查与优化建议。
+本指南面向开发者与运维人员，提供 Open Notebook 的完整开发环境搭建流程，涵盖系统要求、Python 与 Node.js 版本、依赖安装、Docker 与单容器部署、环境变量与数据库初始化、AI 提供商密钥配置、开发服务器启动与热重载、技能系统开发支持、工作流系统开发支持、开发工具脚本使用、以及常见问题排查与优化建议。
 
 ## 项目结构
-Open Notebook 采用前后端分离架构：后端使用 FastAPI（Python），前端使用 Next.js（TypeScript/React）。数据库为 SurrealDB；通过 uv 打包与管理 Python 依赖；Docker 多阶段构建镜像；Supervisor 统一管理多个进程；开发时支持本地直启与 Docker Compose 双模式，特别针对技能系统提供完整的热重载支持。新增的PowerShell恢复脚本为Windows开发者提供了一键恢复开发环境的便利工具。
+Open Notebook 采用前后端分离架构：后端使用 FastAPI（Python），前端使用 Next.js（TypeScript/React）。数据库为 SurrealDB；通过 uv 打包与管理 Python 依赖；Docker 多阶段构建镜像；Supervisor 统一管理多个进程；开发时支持本地直启与 Docker Compose 双模式，特别针对技能系统和工作流系统提供完整的热重载支持。新增的工作流相关文件热重载支持进一步提升了开发者本地代码修改的即时反馈能力。
 
 ```mermaid
 graph TB
@@ -78,6 +86,7 @@ API["FastAPI 应用<br/>api/main.py"]
 Worker["surreal-commands 后台任务<br/>commands/*"]
 PyPkg["Python 依赖<br/>pyproject.toml"]
 SkillSystem["技能系统<br/>open_notebook/skills/*"]
+WorkflowSystem["工作流系统<br/>open_notebook/workflows/*"]
 SkillDomain["技能领域模型<br/>open_notebook/domain/skill.py"]
 InstallDeps["依赖安装脚本<br/>scripts/install-deps.sh"]
 end
@@ -105,6 +114,7 @@ PS --> DocExport
 API --> DB
 API --> PyPkg
 API --> SkillSystem
+API --> WorkflowSystem
 API --> SkillDomain
 Next --> Pkg
 Next --> HotReload
@@ -119,7 +129,7 @@ Sup --> DB
 DevCompose --> API
 DevCompose --> DB
 DevCompose --> SkillSystem
-DevCompose --> SkillDomain
+DevCompose --> WorkflowSystem
 DocExport --> PS
 ```
 
@@ -139,6 +149,7 @@ DocExport --> PS
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
 - [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [open_notebook/workflows/__init__.py](file://open_notebook/workflows/__init__.py#L1-L29)
 
 **章节来源**
 - [README.dev.md](file://README.dev.md#L355-L376)
@@ -154,7 +165,8 @@ DocExport --> PS
 - 开发工具链（uv、Makefile、脚本）：加速依赖安装、服务编排与发布。
 - 运行时配置系统：动态配置 API URL，支持开发环境灵活部署。
 - 技能系统：完整的自动化技能框架，支持热重载开发。
-- **PowerShell恢复脚本**：为Windows开发者提供一键恢复开发环境的便利工具。
+- 工作流系统：基于技能的工作流编排系统，支持模板化和对话式构建。
+- **工作流相关文件热重载**：通过卷挂载实现工作流相关文件的实时更新。
 - **开发工具集合**：包含依赖安装、文档导出等实用脚本。
 
 **章节来源**
@@ -171,32 +183,36 @@ DocExport --> PS
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
 - [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [open_notebook/workflows/__init__.py](file://open_notebook/workflows/__init__.py#L1-L29)
 - [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 
 ## 架构总览
-下图展示开发与生产两种典型部署形态：本地直启（开发机原生）与容器化（Docker + Supervisor），特别强调技能系统的热重载支持和PowerShell恢复脚本的使用。
+下图展示开发与生产两种典型部署形态：本地直启（开发机原生）与容器化（Docker + Supervisor），特别强调技能系统、工作流系统和工作流相关文件的热重载支持。
 
 ```mermaid
 graph TB
 subgraph "本地直启开发"
 L1["Python 3.11~3.12<br/>uv 同步依赖"]
-L2["FastAPI 进程"]
+L2["FastAPI 进程<br/>支持热重载"]
 L3["Next.js 开发服务器<br/>热重载"]
 L4["SurrealDB 容器"]
 L5["运行时配置系统<br/>动态 API URL"]
 L6["技能系统热重载<br/>实时代码更新"]
-L7["PowerShell 恢复脚本<br/>一键恢复环境"]
+L7["工作流系统热重载<br/>模板与构建器实时更新"]
+L8["PowerShell 恢复脚本<br/>一键恢复环境"]
 L1 --> L2
 L2 --> L5
 L2 --> L4
 L2 --> L6
+L2 --> L7
 L3 --> L2
 L3 --> L5
 L3 --> L6
-L7 --> L1
-L7 --> L2
-L7 --> L3
-L7 --> L4
+L3 --> L7
+L8 --> L1
+L8 --> L2
+L8 --> L3
+L8 --> L4
 end
 subgraph "容器化生产/测试"
 C1["Docker 镜像"]
@@ -207,7 +223,8 @@ C5["前端静态服务"]
 C6["SurrealDB 进程"]
 C7["开发专用 Compose<br/>热重载支持"]
 C8["技能系统挂载<br/>open_notebook 目录"]
-C9["开发工具脚本<br/>install-deps.sh, export_docs.py"]
+C9["工作流系统挂载<br/>open_notebook/workflows/*"]
+C10["开发工具脚本<br/>install-deps.sh, export_docs.py"]
 C1 --> C2
 C2 --> C3
 C2 --> C4
@@ -216,9 +233,11 @@ C2 --> C6
 C7 --> C3
 C7 --> C6
 C7 --> C8
+C7 --> C9
 C8 --> L6
-C9 --> C3
-C9 --> C4
+C9 --> L7
+C10 --> C3
+C10 --> C4
 end
 ```
 
@@ -233,6 +252,8 @@ end
 - [supervisord.conf](file://supervisord.conf#L7-L40)
 - [supervisord.single.conf](file://supervisord.single.conf#L7-L51)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
+- [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [open_notebook/workflows/__init__.py](file://open_notebook/workflows/__init__.py#L1-L29)
 - [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 - [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
 - [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
@@ -306,10 +327,12 @@ end
 - 使用 Makefile 的 start-all，同时启动数据库、API、Worker 与前端。
 - 前端热重载：Next.js 开发服务器默认监听 3000 端口。
 - API 文档：启动后访问 http://localhost:5055/docs。
+- **API热重载**：通过 run_api.py 支持热重载模式，自动检测代码变化。
 
 #### 开发专用 Compose 配置（已增强）
 - 使用 docker-compose.dev.yml 启动开发环境。
 - **新增技能系统热重载支持**：通过卷挂载 open_notebook 目录实现技能相关文件的实时热更新。
+- **新增工作流系统热重载支持**：通过卷挂载 open_notebook/workflows/* 实现工作流模板和构建器的实时热更新。
 - 端口映射：8502（Web UI）、5055（REST API）、8000（数据库）。
 
 #### 运行时配置系统
@@ -325,6 +348,7 @@ end
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
 - [frontend/src/app/config/route.ts](file://frontend/src/app/config/route.ts#L28-L68)
 - [api/main.py](file://api/main.py#L187-L189)
+- [run_api.py](file://run_api.py#L16-L31)
 
 ### Docker 与单容器部署
 
@@ -336,6 +360,7 @@ end
 #### 开发专用 Compose（已增强）
 - 使用 docker-compose.dev.yml 启动开发环境。
 - **新增技能系统热重载支持**：挂载 open_notebook 目录实现技能相关文件的实时热更新。
+- **新增工作流系统热重载支持**：挂载 open_notebook/workflows/* 实现工作流模板和构建器的实时热更新。
 - 端口映射：8502（Web UI）、5055（API）、8000（数据库）。
 
 #### 单容器镜像（Dockerfile.single）
@@ -449,6 +474,71 @@ Open Notebook 的技能系统是一个完整的自动化技能框架，支持多
 - [open_notebook/skills/note_organizer.py](file://open_notebook/skills/note_organizer.py#L1-L406)
 - [api/routers/skills.py](file://api/routers/skills.py#L1-L401)
 
+## 工作流系统架构
+
+Open Notebook 的工作流系统是一个基于技能的工作流编排框架，支持复杂的工作流定义、执行和管理。
+
+### 工作流系统核心组件
+
+#### 工作流定义与执行
+- **WorkflowDefinition**：工作流定义，包含步骤、输入输出模式、调度信息。
+- **WorkflowExecution**：工作流执行记录，跟踪执行状态、步骤执行历史和结果。
+- **WorkflowStatus**：工作流状态枚举，支持 PENDING、RUNNING、SUCCESS、FAILED、PARTIAL、CANCELLED。
+
+#### 工作流引擎
+- **WorkflowEngine**：核心执行引擎，负责步骤依赖解析、并发执行、重试逻辑和错误处理。
+- 支持条件执行、并行步骤、依赖关系和错误恢复。
+
+#### 工作流服务层
+- **WorkflowService**：工作流操作的服务层，提供创建、查询、执行和管理接口。
+- 协调引擎、领域模型和外部系统。
+
+#### 工作流模板系统
+- **WorkflowTemplate**：预定义工作流模板，提供即用型工作流配置。
+- **TemplateRegistry**：模板注册表，管理模板的注册、查找和分类。
+
+#### 对话式工作流构建器
+- **ConversationalWorkflowBuilder**：基于自然语言的工作流生成器。
+- **WorkflowSuggestionEngine**：根据用户目标和内容类型提供工作流建议。
+
+### 工作流 API
+
+#### 工作流管理 API
+- 创建、读取、更新、删除工作流定义
+- 复制工作流定义
+- 获取工作流统计信息
+
+#### 工作流执行 API
+- 手动执行工作流
+- 查询执行历史
+- 取消运行中的执行
+
+#### 工作流调度 API
+- 获取工作流调度信息
+- 更新工作流调度
+- 启用/禁用工作流
+
+#### 工作流模板 API
+- 浏览工作流模板
+- 获取模板详情
+- 实例化模板创建工作流
+- 快速创建工作流
+
+#### 对话式构建 API
+- 从自然语言生成工作流
+- 优化现有工作流
+- 获取工作流建议
+- 快速创建模板
+
+**章节来源**
+- [api/routers/workflows.py](file://api/routers/workflows.py#L1-L453)
+- [api/routers/workflow_builder.py](file://api/routers/workflow_builder.py#L1-L305)
+- [api/routers/workflow_templates.py](file://api/routers/workflow_templates.py#L1-L215)
+- [open_notebook/workflows/service.py](file://open_notebook/workflows/service.py#L1-L240)
+- [open_notebook/workflows/engine.py](file://open_notebook/workflows/engine.py#L1-L620)
+- [open_notebook/workflows/templates.py](file://open_notebook/workflows/templates.py#L1-L675)
+- [open_notebook/workflows/conversational.py](file://open_notebook/workflows/conversational.py#L1-L426)
+
 ## 开发工具与脚本
 
 ### PowerShell 恢复脚本（Windows 专用）
@@ -550,7 +640,7 @@ uv run python scripts/export_docs.py
 #### 环境管理
 - 使用 PowerShell 恢复脚本快速检查环境状态
 - 定期运行文档导出工具整理开发文档
-- 确保技能系统依赖正确安装
+- 确保技能系统和工作流系统依赖正确安装
 
 **章节来源**
 - [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
@@ -573,18 +663,21 @@ I --> G
 I --> J["SurrealDB"]
 K["开发专用 Compose<br/>docker-compose.dev.yml"] --> B
 K --> J
-K --> L["技能系统热重载<br/>open_notebook 目录挂载"]
-M["技能系统模块<br/>open_notebook/skills/*"] --> B
-N["技能领域模型<br/>open_notebook/domain/skill.py"] --> B
-L --> M
+K --> L["技能系统热重载<br/>open_notebook 目录"]
+K --> M["工作流系统热重载<br/>open_notebook/workflows/*"]
+N["技能系统模块<br/>open_notebook/skills/*"] --> B
+O["工作流系统模块<br/>open_notebook/workflows/*"] --> B
+P["技能领域模型<br/>open_notebook/domain/skill.py"] --> B
 L --> N
-O["运行时配置系统<br/>动态 API URL"] --> B
-O --> G
-P["PowerShell 恢复脚本<br/>scripts/resume.ps1"] --> K
-Q["依赖安装脚本<br/>scripts/install-deps.sh"] --> B
-R["文档导出工具<br/>scripts/export_docs.py"] --> S["doc_exports/"]
-P --> Q
-P --> R
+M --> O
+O --> P
+Q["运行时配置系统<br/>动态 API URL"] --> B
+Q --> G
+R["PowerShell 恢复脚本<br/>scripts/resume.ps1"] --> K
+S["依赖安装脚本<br/>scripts/install-deps.sh"] --> B
+T["文档导出工具<br/>scripts/export_docs.py"] --> U["doc_exports/"]
+R --> S
+R --> T
 ```
 
 **图表来源**
@@ -595,6 +688,7 @@ P --> R
 - [docker-compose.dev.yml](file://docker-compose.dev.yml#L1-L34)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
 - [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [open_notebook/workflows/__init__.py](file://open_notebook/workflows/__init__.py#L1-L29)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
 - [supervisord.conf](file://supervisord.conf#L1-L41)
 - [supervisord.single.conf](file://supervisord.single.conf#L1-L52)
@@ -609,6 +703,7 @@ P --> R
 ## 性能考虑
 - 优先使用本地直启进行日常开发，获得最快迭代速度与热重载体验。
 - **技能系统热重载**：通过挂载 open_notebook 目录实现技能相关文件的实时更新，显著提升开发效率。
+- **工作流系统热重载**：通过挂载 open_notebook/workflows/* 实现工作流模板和构建器的实时热更新，提升工作流开发体验。
 - 将数据库保持常驻，减少重复启动时间。
 - 仅在需要验证 Dockerfile 变更时使用本地 Docker 构建。
 - 清理缓存与无用镜像，降低资源占用。
@@ -644,9 +739,16 @@ P --> R
 
 ### 热重载不工作
 - **技能系统热重载**：确认开发专用 Compose 正在运行：`make dev`。
-- 检查卷挂载：open_notebook 目录是否正确挂载。
+- **工作流系统热重载**：确认开发专用 Compose 正在运行，open_notebook/workflows/* 目录是否正确挂载。
+- 检查卷挂载：open_notebook 目录和 open_notebook/workflows/* 是否正确挂载。
 - 验证端口映射：8502 和 5055 是否可用。
 - **新增**：确认技能相关文件（open_notebook/skills/*、open_notebook/domain/skill.py）在挂载目录中存在。
+- **新增**：确认工作流相关文件（open_notebook/workflows/*）在挂载目录中存在。
+
+### API热重载问题
+- **API热重载模式**：确认 run_api.py 中的 API_RELOAD 环境变量设置为 true。
+- **热重载目录**：确认 reload_dirs 包含正确的项目目录。
+- **文件监控**：检查 Python 文件变化是否被正确检测。
 
 ### 运行时配置问题
 - 检查 /config 端点是否可访问。
@@ -677,9 +779,10 @@ P --> R
 - [frontend/src/app/config/route.ts](file://frontend/src/app/config/route.ts#L28-L68)
 - [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 - [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
+- [run_api.py](file://run_api.py#L16-L31)
 
 ## 结论
-通过本指南，您可以在本地或容器环境中快速搭建 Open Notebook 的开发与生产环境。建议日常开发采用本地直启，配合 Docker Compose 进行集成测试；生产部署可选用单容器镜像以简化运维。新增的开发专用 Compose 配置、运行时配置系统、PowerShell 恢复脚本和开发工具集合进一步提升了开发体验，特别是技能系统的热重载支持和 Windows 开发者的环境恢复能力，显著改善了技能开发和日常开发的迭代效率。
+通过本指南，您可以在本地或容器环境中快速搭建 Open Notebook 的开发与生产环境。建议日常开发采用本地直启，配合 Docker Compose 进行集成测试；生产部署可选用单容器镜像以简化运维。新增的开发专用 Compose 配置、运行时配置系统、PowerShell 恢复脚本和开发工具集合进一步提升了开发体验，特别是技能系统和工作流系统的热重载支持和 Windows 开发者的环境恢复能力，显著改善了技能开发、工作流开发和日常开发的迭代效率。
 
 ## 附录
 
@@ -709,10 +812,12 @@ P --> R
 
 ### 开发环境配置要点
 - **技能系统热重载**：通过卷挂载实现技能相关文件的实时更新
+- **工作流系统热重载**：通过卷挂载 open_notebook/workflows/* 实现工作流模板和构建器的实时热更新
 - 运行时配置：动态 API URL 获取机制
 - 端口管理：8502（UI）、5055（API）、8000（数据库）
 - 环境隔离：开发专用 Compose 文件与生产配置分离
 - **技能系统模块**：open_notebook/skills/* 和 open_notebook/domain/skill.py 的完整支持
+- **工作流系统模块**：open_notebook/workflows/* 的完整支持
 - **PowerShell 恢复脚本**：Windows 开发者的环境恢复工具
 - **开发工具集合**：依赖安装、文档导出等自动化脚本
 - **自动化环境检查**：Docker 状态、Git 状态、服务端口检测
@@ -723,6 +828,7 @@ P --> R
 - [frontend/next.config.ts](file://frontend/next.config.ts#L1-L36)
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L1-L159)
 - [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L1-L32)
+- [open_notebook/workflows/__init__.py](file://open_notebook/workflows/__init__.py#L1-L29)
 - [scripts/resume.ps1](file://scripts/resume.ps1#L1-L109)
 - [scripts/install-deps.sh](file://scripts/install-deps.sh#L1-L20)
 - [scripts/export_docs.py](file://scripts/export_docs.py#L1-L97)
