--- a/.qoder/repowiki/zh/content/项目概述/核心功能特性/工作流编排系统.md
+++ b/.qoder/repowiki/zh/content/项目概述/核心功能特性/工作流编排系统.md
@@ -18,6 +18,12 @@
 - [docs/7-DEVELOPMENT/architecture.md](file://docs/7-DEVELOPMENT/architecture.md)
 </cite>
 
+## 更新摘要
+**所做更改**
+- 修复了工作流引擎中的SkillConfig导入路径问题
+- 更新了技术实现细节以确保正确的模块导入结构
+- 保持了现有工作流编排功能的完整性
+
 ## 目录
 1. [简介](#简介)
 2. [项目结构](#项目结构)
@@ -392,6 +398,42 @@ APScheduler --> Workflows
 - [open_notebook/workflows/engine.py](file://open_notebook/workflows/engine.py#L192-L199)
 - [open_notebook/skills/scheduler.py](file://open_notebook/skills/scheduler.py#L357-L394)
 
+## 技术实现细节更新
+
+### SkillConfig 导入路径修复
+
+**更新** 修复了工作流引擎中的SkillConfig导入路径问题，确保正确的模块导入结构
+
+在之前的版本中，工作流引擎使用了不正确的导入路径：
+
+```python
+# 之前的问题代码
+from open_notebook.skills import SkillConfig, SkillContext, SkillRegistry, SkillResult, SkillStatus
+```
+
+**修复后的正确导入方式**：
+
+```python
+# 正确的导入方式
+from open_notebook.skills.base import SkillConfig
+from open_notebook.skills import SkillContext, SkillRegistry, SkillResult, SkillStatus
+```
+
+**问题分析**：
+- `SkillConfig` 类实际定义在 `open_notebook.skills.base` 模块中
+- `open_notebook.skills` 包的 `__init__.py` 文件中虽然导出了 `SkillConfig`，但直接从包级别导入会导致模块解析问题
+- 其他相关模块（如 `api/routers/skills.py`、`open_notebook/skills/registry.py` 等）都使用了正确的直接导入方式
+
+**影响范围**：
+- 仅影响工作流引擎的导入语句
+- 不影响任何工作流编排功能的实际行为
+- 保持了现有系统的完整性和稳定性
+
+**章节来源**
+- [open_notebook/workflows/engine.py](file://open_notebook/workflows/engine.py#L27)
+- [open_notebook/skills/base.py](file://open_notebook/skills/base.py#L69-L81)
+- [open_notebook/skills/__init__.py](file://open_notebook/skills/__init__.py#L7)
+
 ## 结论
 
 Open Notebook 的工作流编排系统是一个设计精良、功能强大的自动化平台。其核心优势包括：
@@ -403,3 +445,5 @@ Open Notebook 的工作流编排系统是一个设计精良、功能强大的自
 - **易用性**：提供丰富的 API 和模板系统
 
 该系统特别适合需要处理复杂研究和内容管理任务的场景，为用户提供了强大的自动化能力，同时保持了良好的性能和可靠性。
+
+**更新总结**：本次更新修复了技术实现细节中的导入路径问题，确保了模块导入结构的正确性，同时完全保持了现有工作流编排功能的完整性。
