--- a/.qoder/repowiki/zh/content/项目概述/核心功能特性/技能系统/技能系统.md
+++ b/.qoder/repowiki/zh/content/项目概述/核心功能特性/技能系统/技能系统.md
@@ -43,6 +43,9 @@
 - 扩展为支持自然语言工作流生成和模板化工作流管理
 - 新增工作流执行监控、统计分析和调度管理功能
 - 实现完整的AI驱动工作流设计和优化能力
+- 完全重构为现代化React前端 + FastAPI后端架构
+- 新增工作流构建器API和模板管理API
+- 新增工作流执行统计和概览功能
 
 ## 目录
 1. [简介](#简介)
@@ -86,6 +89,12 @@
 - 平台内容适配和优化
 - 账户生命周期诊断和策略建议
 
+**工作流构建器和模板系统** 新增AI驱动的工作流构建器，支持：
+- 自然语言到工作流定义的转换
+- 预定义工作流模板
+- 快速创建工作流
+- 工作流建议和匹配
+
 系统的核心特点：
 - **现代化前端架构**：基于React 18、Next.js 14、TypeScript构建
 - **响应式状态管理**：使用React Query实现高效的数据同步和缓存
@@ -108,6 +117,8 @@
 - **模板化工作流管理**：预定义工作流模板和快速创建工作流
 - **自然语言工作流生成**：AI驱动的工作流设计和优化
 - **内容运营自动化**：基于Vikki方法论的内容策略执行
+- **工作流统计分析**：提供执行统计和性能分析
+- **工作流调度管理**：支持启用/禁用和计划调度
 
 ## 项目结构
 
@@ -139,22 +150,30 @@ S --> U[service.py<br/>工作流服务]
 S --> V[templates.py<br/>工作流模板]
 S --> W[conversational.py<br/>自然语言生成]
 end
+subgraph "工作流API层"
+X[api/routers/workflows.py<br/>工作流管理API]
+Y[api/routers/workflow_builder.py<br/>工作流构建器API]
+Z[api/routers/workflow_templates.py<br/>模板管理API]
+end
 subgraph "数据模型"
-X[domain/skill.py<br/>领域模型]
-Y[domain/workflow.py<br/>工作流领域模型]
-Z[domain/notebook.py<br/>资产和源模型]
-AA[api/models.py<br/>API模型]
+AA[domain/skill.py<br/>领域模型]
+BB[domain/workflow.py<br/>工作流领域模型]
+CC[domain/notebook.py<br/>资产和源模型]
+DD[api/models.py<br/>API模型]
 end
 A --> K
 F --> K
 I --> F
 K --> M
-K --> X
+K --> AA
 M --> L
-X --> L
-Y --> S
-Z --> L
-AA --> Z
+AA --> L
+BB --> S
+CC --> L
+DD --> CC
+X --> BB
+Y --> W
+Z --> V
 ```
 
 **图表来源**
@@ -175,6 +194,9 @@ AA --> Z
 - [open_notebook/domain/workflow.py](file://open_notebook/domain/workflow.py#L1-L309)
 - [open_notebook/domain/notebook.py](file://open_notebook/domain/notebook.py#L232-L294)
 - [api/models.py](file://api/models.py#L274-L349)
+- [api/routers/workflows.py](file://api/routers/workflows.py#L1-L453)
+- [api/routers/workflow_builder.py](file://api/routers/workflow_builder.py#L1-L305)
+- [api/routers/workflow_templates.py](file://api/routers/workflow_templates.py#L1-L215)
 
 **章节来源**
 - [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L1-L189)
@@ -235,6 +257,12 @@ AA --> Z
 3. **BrowserMonitorSkill** - 网页监控和变更检测技能
 4. **BrowserCrawlerSkill** - AI驱动的网页爬取技能
 
+### 工作流API组件
+
+1. **Workflows API Router** - 工作流管理API路由
+2. **WorkflowBuilder API Router** - AI工作流构建器API路由
+3. **WorkflowTemplates API Router** - 模板管理API路由
+
 **章节来源**
 - [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L16-L189)
 - [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L3-L34)
@@ -251,6 +279,9 @@ AA --> Z
 - [open_notebook/domain/skill.py](file://open_notebook/domain/skill.py#L17-L165)
 - [open_notebook/domain/workflow.py](file://open_notebook/domain/workflow.py#L39-L309)
 - [open_notebook/domain/notebook.py](file://open_notebook/domain/notebook.py#L232-L294)
+- [api/routers/workflows.py](file://api/routers/workflows.py#L1-L453)
+- [api/routers/workflow_builder.py](file://api/routers/workflow_builder.py#L1-L305)
+- [api/routers/workflow_templates.py](file://api/routers/workflow_templates.py#L1-L215)
 
 ## 架构概览
 
@@ -281,6 +312,10 @@ Workflows --> Engine[WorkflowEngine]
 Workflows --> Service[WorkflowService]
 Workflows --> Templates[WorkflowTemplates]
 Workflows --> Conversational[Conversational Builder]
+WorkflowsAPI[Workflows API<br/>工作流管理]
+WorkflowsAPI --> Workflows
+WorkflowsAPI --> Builder[WorkflowBuilder API]
+WorkflowsAPI --> TemplatesAPI[WorkflowTemplates API]
 end
 subgraph "数据层"
 Domain[领域模型<br/>SkillInstance, WorkflowDefinition]
@@ -320,6 +355,9 @@ Repository --> Exceptions
 - [open_notebook/domain/notebook.py](file://open_notebook/domain/notebook.py#L232-L294)
 - [open_notebook/database/repository.py](file://open_notebook/database/repository.py#L65-L195)
 - [open_notebook/exceptions.py](file://open_notebook/exceptions.py#L25-L28)
+- [api/routers/workflows.py](file://api/routers/workflows.py#L1-L453)
+- [api/routers/workflow_builder.py](file://api/routers/workflow_builder.py#L1-L305)
+- [api/routers/workflow_templates.py](file://api/routers/workflow_templates.py#L1-L215)
 
 ## 详细组件分析
 
@@ -1229,7 +1267,7 @@ SkillsAPI --> SkillInstance : "返回/接收"
 ```
 
 **图表来源**
-- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L3-L53)
+- [frontend/src/lib/api/skills.ts](file://frontend/src/lib/api/skills.ts#L1-L145)
 
 **章节来源**
 - [frontend/src/app/(dashboard)/skills/page.tsx](file://frontend/src/app/(dashboard)/skills/page.tsx#L16-L189)
@@ -1950,22 +1988,6 @@ asset=AssetModel(
 )
 ```
 
-### 数据模型集成改进
-
-#### Asset模型字段
-- `file_path`: 可选的本地文件路径
-- `url`: 可选的远程URL地址
-
-#### Source模型集成
-- `asset`: 关联的Asset对象
-- `topics`: 主题标签列表
-- `full_text`: 完整文本内容
-
-#### API响应格式
-- `asset`: AssetModel对象，用于API响应
-- `embedded`: 嵌入状态标志
-- `embedded_chunks`: 嵌入块数量
-
 ### 集成效果
 
 这种改进确保了：
@@ -2362,6 +2384,12 @@ Repository --> Exceptions
 - 平台内容适配和优化
 - 账户生命周期诊断和策略建议
 
+**工作流构建器和模板系统** 新增AI驱动的工作流构建器，支持：
+- 自然语言到工作流定义的转换
+- 预定义工作流模板
+- 快速创建工作流
+- 工作流建议和匹配
+
 系统的主要优势包括：
 - **现代化前端架构**：基于React 18、Next.js 14、TypeScript构建，提供类型安全和更好的开发体验
 - **响应式状态管理**：使用React Query实现高效的数据同步和缓存，替代传统的Redux模式
@@ -2385,6 +2413,8 @@ Repository --> Exceptions
 - **模板化工作流管理**：预定义工作流模板和快速创建工作流
 - **自然语言工作流生成**：AI驱动的工作流设计和优化
 - **内容运营自动化**：基于Vikki方法论的内容策略执行
+- **工作流统计分析**：提供执行统计和性能分析
+- **工作流调度管理**：支持启用/禁用和计划调度
 
 经过最近的重大改进，系统在以下方面得到了显著提升：
 - **React前端实现**：完全重构为现代化的React应用，提供更好的用户体验
@@ -2409,6 +2439,7 @@ Repository --> Exceptions
 - **自然语言工作流生成**：AI驱动的工作流设计和优化
 - **模板化工作流管理**：预定义模板和快速创建工作流
 - **执行监控和统计**：实时工作流执行状态和性能分析
+- **工作流API系统**：完整的工作流管理、构建和模板API
 
 未来的发展方向可能包括：
 - 更多内置技能类型的扩展
@@ -2434,5 +2465,11 @@ Repository --> Exceptions
 - 执行历史的详细审计和追踪
 - 性能瓶颈分析和优化建议
 - 集成更多第三方AI服务和模型
+- 实现更完善的错误恢复和容错机制
+- 增强工作流的可视化设计和编辑功能
+- 支持更复杂的工作流组合和嵌套
+- 实现工作流的实时协作和版本控制
+- 增强工作流的可解释性和审计追踪
+- 支持更多平台和生态系统的集成
 
 通过这次完全重构和扩展，技能系统不仅保持了原有的强大功能，还获得了现代化的技术架构、完整的工作流编排能力和Vikki内容运营自动化，为未来的持续发展奠定了坚实的基础。
