--- a/.qoder/repowiki/zh/content/配置管理/AI提供商配置/云提供商配置.md
+++ b/.qoder/repowiki/zh/content/配置管理/AI提供商配置/云提供商配置.md
@@ -12,7 +12,21 @@
 - [api/routers/credentials.py](file://api/routers/credentials.py)
 - [api/models.py](file://api/models.py)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts)
+- [api/routers/models.py](file://api/routers/models.py)
+- [open_notebook/ai/key_provider.py](file://open_notebook/ai/key_provider.py)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx)
+- [frontend/src/lib/api/models.ts](file://frontend/src/lib/api/models.ts)
+- [frontend/src/lib/hooks/use-models.ts](file://frontend/src/lib/hooks/use-models.ts)
+- [frontend/src/lib/types/models.ts](file://frontend/src/lib/types/models.ts)
 </cite>
+
+## 更新摘要
+**变更内容**
+- 新增前端模型选择系统的重大增强：新增17个AI提供商的预填充模型选择功能
+- 更新提供商配置要点与建议，包含新增的中国提供商详细信息
+- 增加中国提供商的成本估算、模型推荐和配置步骤
+- 更新多提供商并行使用与切换指南，包含中国提供商选项
+- 新增静态模型列表支持，提供API发现失败时的回退机制
 
 ## 目录
 1. [简介](#简介)
@@ -29,11 +43,14 @@
 ## 简介
 本指南面向需要在系统中配置和使用多家云AI提供商（OpenAI、Anthropic Claude、Google Gemini、Groq、OpenRouter等）的用户与运维人员。内容覆盖从API密钥获取、配置参数设置、连接测试，到模型选择建议、成本估算与性能对比，并提供提供商切换、多提供商并行使用及最佳实践指导。
 
+**更新** 新增前端模型选择系统的重大增强：新增17个AI提供商的预填充模型选择功能，包括DeepSeek、阿里云百炼、硅基流动、智谱AI、月之暗面等提供商的完整模型列表，以及改进的默认基础URL配置支持。系统现在提供静态模型列表作为API发现失败时的回退机制，确保配置过程的可靠性。
+
 ## 项目结构
-围绕“云提供商配置”的关键模块包括：
+围绕"云提供商配置"的关键模块包括：
 - 文档层：提供完整的配置步骤与建议
 - 后端服务层：凭证管理、模型发现与注册、连接测试、默认模型选择
 - 前端配置层：运行时配置解析与API地址优先级
+- 前端模型选择层：预填充模型选择、静态模型列表支持
 
 ```mermaid
 graph TB
@@ -51,6 +68,10 @@ S7["open_notebook/ai/provision.py"]
 end
 subgraph "前端配置层"
 F1["frontend/src/lib/config.ts"]
+F2["frontend/src/app/(dashboard)/settings/api-keys/page.tsx"]
+F3["frontend/src/lib/api/models.ts"]
+F4["frontend/src/lib/hooks/use-models.ts"]
+F5["frontend/src/lib/types/models.ts"]
 end
 D1 --> S1
 S1 --> S2
@@ -59,29 +80,40 @@ S1 --> S4
 S2 --> S7
 S5 --> S6
 F1 --> S1
+F2 --> F3
+F3 --> F4
+F4 --> F5
 ```
 
 **图表来源**
 - [docs/5-CONFIGURATION/ai-providers.md](file://docs/5-CONFIGURATION/ai-providers.md#L1-L468)
 - [api/routers/credentials.py](file://api/routers/credentials.py#L1-L387)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L439)
 - [open_notebook/domain/provider_config.py](file://open_notebook/domain/provider_config.py#L1-L445)
 - [open_notebook/utils/encryption.py](file://open_notebook/utils/encryption.py#L1-L199)
 - [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
+- [frontend/src/lib/api/models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
+- [frontend/src/lib/hooks/use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [frontend/src/lib/types/models.ts](file://frontend/src/lib/types/models.ts#L1-L71)
 
 **章节来源**
 - [docs/5-CONFIGURATION/ai-providers.md](file://docs/5-CONFIGURATION/ai-providers.md#L1-L468)
 - [api/routers/credentials.py](file://api/routers/credentials.py#L1-L387)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L439)
 - [open_notebook/domain/provider_config.py](file://open_notebook/domain/provider_config.py#L1-L445)
 - [open_notebook/utils/encryption.py](file://open_notebook/utils/encryption.py#L1-L199)
 - [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
+- [frontend/src/lib/api/models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
+- [frontend/src/lib/hooks/use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [frontend/src/lib/types/models.ts](file://frontend/src/lib/types/models.ts#L1-L71)
 
 ## 核心组件
 - 凭证与配置管理：通过数据库记录存储加密后的API密钥与端点配置，支持多提供商、多凭证并存，且可设置默认凭证。
@@ -89,16 +121,19 @@ F1 --> S1
 - 连接测试：对指定凭证或默认凭证进行最小化调用测试，验证连通性与权限。
 - 默认模型选择：根据上下文大小、显式指定模型ID或默认类型，动态选择合适的模型实例。
 - 加密存储：基于对称加密的密钥存储与解密，确保敏感信息安全。
+- **新增** 静态模型列表：为17个AI提供商提供预填充的模型选择功能，包含完整的模型列表和默认基础URL配置。
+- **新增** 前端模型选择：提供直观的模型选择界面，支持多选和搜索功能。
 
 **章节来源**
 - [open_notebook/domain/provider_config.py](file://open_notebook/domain/provider_config.py#L22-L445)
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L439)
 - [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [open_notebook/utils/encryption.py](file://open_notebook/utils/encryption.py#L1-L199)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L163-L313)
 
 ## 架构总览
-系统采用“凭证驱动 + 模型注册 + 动态选择”的架构模式。前端通过运行时配置确定API地址；后端通过凭证路由管理API密钥与端点；模型发现模块负责拉取并注册可用模型；默认模型选择模块根据上下文与配置返回最优模型实例。
+系统采用"凭证驱动 + 模型注册 + 动态选择"的架构模式。前端通过运行时配置确定API地址；后端通过凭证路由管理API密钥与端点；模型发现模块负责拉取并注册可用模型；默认模型选择模块根据上下文与配置返回最优模型实例。**更新** 新增静态模型列表支持，提供API发现失败时的回退机制。
 
 ```mermaid
 sequenceDiagram
@@ -112,11 +147,13 @@ participant Provider as "云提供商"
 User->>Frontend : 打开设置页面
 Frontend->>API : 获取运行时配置
 API-->>Frontend : 返回API地址与状态
+Frontend->>Frontend : 显示静态模型列表
 User->>Credentials : 添加/编辑凭证
 Credentials->>Discovery : 发现模型
 Discovery->>Provider : 调用提供商API
 Provider-->>Discovery : 返回模型列表
 Discovery-->>Credentials : 注册模型
+Frontend->>Frontend : 显示API发现的模型
 User->>Credentials : 测试连接
 Credentials->>Provider : 最小化调用
 Provider-->>Credentials : 返回结果
@@ -131,6 +168,7 @@ Models-->>User : 保存成功
 - [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L608-L725)
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L170-L300)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L220-L264)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L163-L313)
 
 ## 详细组件分析
 
@@ -185,9 +223,10 @@ ProviderConfig --> ProviderCredential : "管理多个凭证"
 - [open_notebook/utils/encryption.py](file://open_notebook/utils/encryption.py#L128-L199)
 
 ### 模型发现与注册（ModelDiscovery）
-- 针对不同提供商实现专用发现函数，如OpenAI、Anthropic、Google Gemini、Groq、Mistral、DeepSeek、xAI、OpenRouter、ElevenLabs等。
+- 针对不同提供商实现专用发现函数，如OpenAI、Anthropic、Google Gemini、Groq、Mistral、DeepSeek、xAI、OpenRouter、ElevenLabs、**阿里云百炼、硅基流动、智谱AI、月之暗面**等。
 - 对模型进行类型分类（语言模型、嵌入、语音识别、文本转语音），并批量注册到数据库。
 - 支持同步所有提供商模型，避免重复注册，提升效率。
+- **新增** 静态模型列表：为17个AI提供商提供预填充的模型选择功能，包含完整的模型列表和默认基础URL配置。
 
 ```mermaid
 flowchart TD
@@ -206,12 +245,13 @@ Skip --> Done
 - [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L608-L725)
 
 **章节来源**
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 
 ### 连接测试（ConnectionTester）
 - 针对不同提供商执行最小化调用测试，包括语言模型、嵌入、文本转语音等类型。
 - 对常见错误进行归一化提示（如无效密钥、速率限制、网络超时、模型不存在等）。
 - 特殊提供商（如Azure、Ollama、OpenAI兼容）采用专门的探测逻辑。
+- **更新** 新增DeepSeek、阿里云百炼、智谱AI、月之暗面等提供商的测试模型配置。
 
 ```mermaid
 sequenceDiagram
@@ -268,10 +308,24 @@ Valid --> |否| Error["抛出类型错误"]
 **章节来源**
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
 
+### **新增** 前端模型选择系统
+- **提供商排序**：中文服务商优先显示，DeepSeek排在首位，然后是阿里云百炼、硅基流动、智谱AI、月之暗面
+- **静态模型列表**：为每个提供商提供预填充的模型选择功能，包含完整的模型列表
+- **默认基础URL**：为每个提供商提供默认的基础URL配置
+- **模型类型支持**：支持语言模型、嵌入模型、文本转语音、语音识别等多类型模型
+- **回退机制**：当API发现失败时，使用静态模型列表作为回退方案
+
+**章节来源**
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L313)
+- [frontend/src/lib/api/models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
+- [frontend/src/lib/hooks/use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [frontend/src/lib/types/models.ts](file://frontend/src/lib/types/models.ts#L1-L71)
+
 ## 依赖关系分析
-- 凭证路由（credentials.py）依赖模型发现（model_discovery.py）与连接测试（connection_tester.py）实现“发现模型”和“测试连接”功能。
+- 凭证路由（credentials.py）依赖模型发现（model_discovery.py）与连接测试（connection_tester.py）实现"发现模型"和"测试连接"功能。
 - 模型管理（models.py）依赖凭证（domain/provider_config.py）与密钥提供（ai/key_provider.py）以构建期望的模型实例。
 - 前端配置（frontend/config.ts）依赖后端配置端点（api/routers/config.py）以决定API访问地址。
+- **新增** 前端模型选择依赖API接口（models.ts）和状态管理（use-models.ts）。
 
 ```mermaid
 graph LR
@@ -280,87 +334,175 @@ Credentials --> Tester["open_notebook/ai/connection_tester.py"]
 Models["open_notebook/ai/models.py"] --> ProviderCfg["open_notebook/domain/provider_config.py"]
 Models --> Provision["open_notebook/ai/provision.py"]
 Frontend["frontend/src/lib/config.ts"] --> APIConfig["api/routers/config.py"]
+FrontendModels["frontend/src/app/(dashboard)/settings/api-keys/page.tsx"] --> ModelsAPI["frontend/src/lib/api/models.ts"]
+ModelsAPI --> ModelsHooks["frontend/src/lib/hooks/use-models.ts"]
+ModelsHooks --> ModelsTypes["frontend/src/lib/types/models.ts"]
 ```
 
 **图表来源**
 - [api/routers/credentials.py](file://api/routers/credentials.py#L1-L387)
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L439)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
 - [open_notebook/domain/provider_config.py](file://open_notebook/domain/provider_config.py#L1-L445)
 - [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
+- [frontend/src/lib/api/models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
+- [frontend/src/lib/hooks/use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [frontend/src/lib/types/models.ts](file://frontend/src/lib/types/models.ts#L1-L71)
 
 **章节来源**
 - [api/routers/credentials.py](file://api/routers/credentials.py#L1-L387)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L1-L267)
-- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L757)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L1-L1071)
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L1-L439)
 - [open_notebook/domain/provider_config.py](file://open_notebook/domain/provider_config.py#L1-L445)
 - [open_notebook/ai/provision.py](file://open_notebook/ai/provision.py#L1-L61)
 - [frontend/src/lib/config.ts](file://frontend/src/lib/config.ts#L1-L149)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L1-L1560)
+- [frontend/src/lib/api/models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
+- [frontend/src/lib/hooks/use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [frontend/src/lib/types/models.ts](file://frontend/src/lib/types/models.ts#L1-L71)
 
 ## 性能考量
 - 大上下文模型选择：当输入token数超过阈值时自动切换至大上下文模型，避免截断影响质量。
 - 并行模型发现：系统支持并发发现多个提供商的模型，缩短初始化时间。
 - 缓存与延迟：模型实例由底层工厂缓存，减少重复创建开销；凭证与默认模型每次从数据库读取，确保最新配置生效。
 - 网络与超时：连接测试与模型发现均设置了合理的超时时间，避免阻塞。
-
-[本节为通用性能讨论，无需特定文件引用]
+- **新增** 静态模型列表：提供即时的模型选择体验，无需等待API响应。
 
 ## 故障排除指南
-- “无效API密钥”：检查密钥前缀与提供商要求一致，并在设置中重新测试连接。
-- “速率限制”：提供商限流时会返回相应状态，需等待或升级账户。
-- “模型不可用”：尝试切换到其他模型或重新发现模型；对于特定提供商（如Azure）需确认部署名称正确。
-- “连接失败/超时”：检查网络连通性、代理设置与端点URL。
-- “数据库离线”：查看后端健康检查状态，确认数据库可达。
+- "无效API密钥"：检查密钥前缀与提供商要求一致，并在设置中重新测试连接。
+- "速率限制"：提供商限流时会返回相应状态，需等待或升级账户。
+- "模型不可用"：尝试切换到其他模型或重新发现模型；对于特定提供商（如Azure）需确认部署名称正确。
+- "连接失败/超时"：检查网络连通性、代理设置与端点URL。
+- "数据库离线"：查看后端健康检查状态，确认数据库可达。
+- **新增** "模型发现失败"：系统会自动回退到静态模型列表，确保配置过程不受影响。
 
 **章节来源**
 - [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L275-L300)
 - [api/routers/config.py](file://api/routers/config.py#L102-L121)
 
 ## 结论
-通过统一的凭证管理、自动化的模型发现与注册、完善的连接测试与默认模型选择机制，系统为OpenAI、Anthropic、Google Gemini、Groq、OpenRouter等主流云提供商提供了标准化的配置流程。结合多提供商并行使用与加密存储策略，既能满足不同场景下的质量与成本需求，又能保障安全性与可维护性。
-
-[本节为总结性内容，无需特定文件引用]
+通过统一的凭证管理、自动化的模型发现与注册、完善的连接测试与默认模型选择机制，系统为OpenAI、Anthropic、Google Gemini、Groq、OpenRouter、**阿里云百炼、硅基流动、智谱AI、月之暗面**等主流云提供商提供了标准化的配置流程。**更新** 新增的前端模型选择系统进一步提升了用户体验，提供17个AI提供商的预填充模型选择功能和静态模型列表支持，确保在API发现失败时仍能正常配置。结合多提供商并行使用与加密存储策略，既能满足不同场景下的质量与成本需求，又能保障安全性与可维护性。
 
 ## 附录
 
 ### 各提供商配置要点与建议
-- OpenAI
+- **OpenAI**
   - 成本：约$0.03–0.15/1K tokens
   - 推荐模型：gpt-4o（平衡）、gpt-4o-mini（测试/便宜）、o1/o1-mini（复杂推理）
   - 配置步骤：在设置中添加凭证，测试连接，发现并注册模型
-- Anthropic（Claude）
+- **Anthropic（Claude）**
   - 成本：约$0.80–3.00/1M tokens（长上下文优势）
   - 推荐模型：claude-sonnet-4-5（最新最佳）、claude-3-5-haiku（便宜）、claude-opus-4-5（最强）
-- Google Gemini
+- **Google Gemini**
   - 成本：约$0.075–0.30/1K tokens
   - 推荐模型：gemini-2.0-flash-exp（最新最快）、gemini-2.0-flash（稳定）、gemini-1.5-pro（长上下文）
-- Groq
+- **Groq**
   - 成本：约$0.05/1M tokens（极快但模型有限）
   - 推荐模型：llama-3.3-70b-versatile（质量）、gemma2-9b-it（超快）
-- OpenRouter
+- **OpenRouter**
   - 成本：随模型变化（$0.05–15/1M）
   - 推荐模型：anthropic/claude-sonnet-4.5、google/gemini-2.0-flash-exp、meta-llama/llama-3.3-70b-instruct
 
+**更新** 新增中国AI提供商详细配置指南：
+
+- **DeepSeek**
+  - 成本：约$0.0001–0.0005/1K tokens（取决于具体模型）
+  - 推荐模型：deepseek-chat（对话）、deepseek-reasoner（推理）
+  - 配置步骤：在设置中添加凭证，选择"DeepSeek"提供商，测试连接，发现并注册模型
+  - 优势：支持推理增强模型，适合复杂任务
+- **阿里云百炼（Qwen）**
+  - 成本：约¥0.0005–0.002/1K tokens（人民币计价，约$0.00007–0.00028/1K tokens）
+  - 推荐模型：qwen-max（高质量对话）、qwen-plus（平衡选择）、qwen-turbo（快速响应）
+  - 配置步骤：在设置中添加凭证，选择"通义千问"提供商，测试连接，发现并注册模型
+  - 优势：国内访问速度快，支持中文优化，价格相对便宜
+- **硅基流动（SiliconFlow）**
+  - 成本：约$0.0001–0.0005/1K tokens（取决于具体模型）
+  - 推荐模型：Qwen/Qwen2.5-72B-Instruct（大模型）、Qwen/Qwen2.5-7B-Instruct（性价比）
+  - 配置步骤：在设置中添加凭证，选择"SiliconFlow"提供商，测试连接，发现并注册模型
+  - 优势：支持多种开源模型，适合多模型实验
+- **智谱AI（Zhipu）**
+  - 成本：约¥0.0003–0.0015/1K tokens（GLM系列）
+  - 推荐模型：glm-5（最新最强）、glm-4-plus（平衡选择）、glm-4-flash（快速响应）
+  - 配置步骤：在设置中添加凭证，选择"智谱AI"提供商，测试连接，发现并注册模型
+  - 优势：GLM系列模型在中文理解方面表现优异
+- **月之暗面（Moonshot）**
+  - 成本：约¥0.0008–0.003/1K tokens（Kimi系列）
+  - 推荐模型：kimi-k2-5（最新版本）、moonshot-v1-128k（长上下文）
+  - 配置步骤：在设置中添加凭证，选择"Moonshot"提供商，测试连接，发现并注册模型
+  - 优势：长上下文能力出色，适合处理长文档
+
 **章节来源**
 - [docs/5-CONFIGURATION/ai-providers.md](file://docs/5-CONFIGURATION/ai-providers.md#L25-L250)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L70-L125)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L216-L242)
+- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L31-L37)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L163-L313)
 
 ### 多提供商并行使用与切换
 - 可同时维护多个提供商凭证，按项目或团队成员分别配置。
 - 通过设置默认模型与显式指定模型ID实现灵活切换。
-- 使用“发现模型”和“注册模型”功能快速启用新模型。
+- 使用"发现模型"和"注册模型"功能快速启用新模型。
+- **新增** 支持静态模型列表回退，确保配置过程的可靠性。
+
+**更新** 新增中国提供商的并行使用建议：
+- 中国提供商（阿里云百炼、智谱AI、月之暗面）适合国内用户，具有更好的网络性能和成本优势
+- 国际提供商（OpenAI、Anthropic、Google Gemini）适合国际化团队和多语言场景
+- 可以在同一项目中混合使用，根据任务类型选择最适合的提供商
+- **新增** 前端提供直观的模型选择界面，支持多选和搜索功能
 
 **章节来源**
 - [api/routers/credentials.py](file://api/routers/credentials.py#L319-L358)
 - [open_notebook/ai/models.py](file://open_notebook/ai/models.py#L220-L264)
+- [api/routers/models.py](file://api/routers/models.py#L87-L114)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L313)
 
 ### 安全与合规建议
 - 必须设置加密密钥以启用数据库中的API密钥加密存储。
 - 生产环境建议使用Docker secrets文件方式注入密钥。
 - 定期轮换API密钥并清理不再使用的凭证。
 
+**更新** 新增中国提供商的安全建议：
+- 中国提供商的API密钥存储遵循相同的安全标准
+- 建议优先使用阿里云等国内托管服务的密钥管理功能
+- 跨境数据传输需遵守相关法律法规
+
 **章节来源**
 - [open_notebook/utils/encryption.py](file://open_notebook/utils/encryption.py#L29-L101)
 - [open_notebook/domain/provider_config.py](file://open_notebook/domain/provider_config.py#L1-L445)
+
+### 中国AI提供商技术特性对比
+
+| 特性 | DeepSeek | 阿里云百炼 | 硅基流动 | 智谱AI | 月之暗面 |
+|------|----------|------------|----------|--------|----------|
+| **语言支持** | 多语言 | 中文优化 | 多语言 | 中文优化 | 中文优化 |
+| **长上下文** | 支持（128K） | 支持（128K） | 支持（128K） | 支持（128K） | 支持（128K） |
+| **推理能力** | 优秀 | 一般 | 一般 | 优秀 | 一般 |
+| **多模态** | 图像理解 | 图像理解 | 图像理解 | 图像理解 | 无 |
+| **嵌入模型** | 支持 | 支持 | 支持 | 支持 | 无 |
+| **价格优势** | 较高 | 中等 | 较高 | 中等 | 中等 |
+| **网络延迟** | 中等 | 低（国内） | 中等 | 低（国内） | 低（国内） |
+| **静态模型列表** | ✅ | ✅ | ✅ | ✅ | ✅ |
+
+**章节来源**
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L80-L125)
+- [open_notebook/ai/model_discovery.py](file://open_notebook/ai/model_discovery.py#L216-L242)
+- [open_notebook/ai/connection_tester.py](file://open_notebook/ai/connection_tester.py#L31-L37)
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L163-L313)
+
+### **新增** 前端模型选择功能详解
+- **提供商排序**：中文服务商优先显示，DeepSeek排在首位，然后是阿里云百炼、硅基流动、智谱AI、月之暗面
+- **静态模型列表**：为每个提供商提供预填充的模型选择功能，包含完整的模型列表
+- **默认基础URL**：为每个提供商提供默认的基础URL配置，简化配置过程
+- **模型类型支持**：支持语言模型、嵌入模型、文本转语音、语音识别等多类型模型
+- **回退机制**：当API发现失败时，使用静态模型列表作为回退方案
+- **用户界面**：提供直观的模型选择界面，支持多选和搜索功能
+
+**章节来源**
+- [frontend/src/app/(dashboard)/settings/api-keys/page.tsx](file://frontend/src/app/(dashboard)/settings/api-keys/page.tsx#L85-L313)
+- [frontend/src/lib/api/models.ts](file://frontend/src/lib/api/models.ts#L1-L106)
+- [frontend/src/lib/hooks/use-models.ts](file://frontend/src/lib/hooks/use-models.ts#L1-L200)
+- [frontend/src/lib/types/models.ts](file://frontend/src/lib/types/models.ts#L1-L71)
